# libmanta

./: .gitignore  .gitmodules  DoxygenMain_8h_source.html  HarmonicTable.map  MantaClient_8h_source.html  MantaExceptions_8h_source.html  MantaMap_8h_source.html  MantaMulti_8cpp_source.html  MantaMulti_8h_source.html  MantaServer_8h_source.html  MantaUSB_8cpp_source.html  MantaUSB_8h_source.html  MantaVersion_8h_source.html  Manta_8cpp_source.html  Manta_8h_source.html  README  README.md  Wicki-Hayden.map  annotated.html  classManta-members.html  classManta.html  classMantaClient-members.html  classMantaClient.html  classMantaClient__inherit__graph.map  classMantaClient__inherit__graph.md5  classMantaMulti-members.html  classMantaMulti.html  classMantaServer-members.html  classMantaServer.html  classMantaServer__inherit__graph.md5  classMantaUSB-members.html  classMantaUSB.html  classManta__inherit__graph.md5  classes.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  (+4 more)
MantaFlext/: Info.plist  MantaFlext.cpp  MantaFlext.h  MantaFlextCentroid.cpp  MantaFlextCentroid.h  MantaFlextEvents.cpp  MantaFlextHandlers.cpp  MantaFlextLibrary.cpp  MantaFlextMaximum.cpp  MantaFlextMaximum.h  MantaFlextPoly.cpp  MantaFlextPoly.h  MantaFlextVersion.h  PadMap.pd  disp.pd  loadbangtest.pd  main.cpp  manta-help.pd  manta-objectmappings.txt  manta.maxhelp  multi-manta  package.txt  switchtest.pd
MantaFlext/manta.xcodeproj/: project.pbxproj
MantaFlext/manta.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
MantaMIDI/: .gitignore  CMakeLists.txt  CMakeLists_old.txt  CoreMidiManager.cpp  CoreMidiManager.h  LayoutMgr.cpp  MIDIHandler.cpp  MIDImanager.cpp  MIDImanager.h  MantaMIDI.cpp  MantaMidiSettings.cpp  MantaMidiSettings.h  MantaMidi_Settings.maxpat  OptionHolder.cpp  OptionHolder.h  README.md  RtMidiManager.cpp  RtMidiManager.h  mantalayout.rtf  usage.txt
MantaMIDI/editor/: parameditor.maxpat
MantaMIDI/gui/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mantathread.cpp  mantathread.h  padsettingsdialog.cpp  padsettingsdialog.h  padsettingsdialog.ui  qmantalogging.cpp  qmantalogging.h  qmantasettings.cpp  qmantasettings.h
MantaMIDI/layout/: LayoutMgr.h
MantaMIDI/midimanager/: CoreMidiManager.cpp  MIDImanager.cpp  MIDImanager.h  RtMidiManager.cpp  RtMidiManager.h
MantaMIDI/presets/: chromatic.txt  duet.txt  honeycomb.txt  live.txt  majorscale.txt  minorscale.txt  piano.txt  wicki-hayden.txt
MantaMIDI/settings/: MantaMidiSettings.cpp  MantaMidiSettings.h  MantaSettingsParser.cpp  MantaSettingsParser.h
MantaOSC/: CMakeLists.txt  MantaOSC Test.pd  MantaOSC Test.scd  MantaOSC.cpp  README.markdown  README.md
core/: .gitignore  CMakeLists.txt  Doxyfile  DoxygenMain.h  Manta.cpp  Manta.h  MantaClient.h  MantaExceptions.h  MantaMulti.cpp  MantaMulti.h  MantaServer.h  MantaTypes.h  MantaUSB.cpp  MantaUSB.h  MantaVersion.h
core/doc/html/: MantaClient_8h.html  MantaClient_8h__dep__incl.map  MantaClient_8h__dep__incl.md5  MantaClient_8h__incl.md5  MantaClient_8h_source.html  MantaExceptions_8h.html  MantaExceptions_8h__dep__incl.map  MantaExceptions_8h__dep__incl.md5  MantaExceptions_8h__incl.md5  MantaExceptions_8h_source.html  MantaMap_8h.html  MantaMap_8h__incl.md5  MantaMap_8h_source.html  MantaMulti_8cpp.html  MantaMulti_8cpp__incl.map  MantaMulti_8cpp__incl.md5  MantaMulti_8cpp_source.html  MantaMulti_8h.html  MantaMulti_8h__dep__incl.map  MantaMulti_8h__dep__incl.md5  MantaMulti_8h__incl.map  MantaMulti_8h__incl.md5  MantaMulti_8h_source.html  MantaServer_8h.html  MantaServer_8h__dep__incl.md5  MantaServer_8h_source.html  MantaUSB_8cpp.html  MantaUSB_8cpp__incl.map  MantaUSB_8cpp__incl.md5  MantaUSB_8cpp_source.html  MantaUSB_8h.html  MantaUSB_8h__dep__incl.map  MantaUSB_8h__dep__incl.md5  MantaUSB_8h__incl.md5  MantaUSB_8h_source.html  MantaVersion_8h.html  MantaVersion_8h_source.html  Manta_8cpp.html  Manta_8cpp__incl.map  Manta_8cpp__incl.md5  (+91 more)
core/doc/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_7e.js  classes_6c.js  classes_6d.js  defines_6c.js  defines_73.js  enums_6c.js  enumvalues_61.js  enumvalues_62.js  enumvalues_6f.js  enumvalues_70.js  enumvalues_72.js  enumvalues_73.js  files_6d.js  functions_61.js  functions_62.js  functions_63.js  functions_64.js  functions_66.js  functions_68.js  functions_6c.js  functions_6d.js  functions_70.js  functions_72.js  functions_73.js  search.js  (+14 more)
core/doc/latex/: MantaClient_8h.tex  MantaClient_8h__dep__incl.md5  MantaClient_8h__incl.md5  MantaExceptions_8h.tex  MantaExceptions_8h__dep__incl.md5  MantaExceptions_8h__incl.md5  MantaMap_8h.tex  MantaMap_8h__incl.md5  MantaMulti_8cpp.tex  MantaMulti_8cpp__incl.md5  MantaMulti_8h.tex  MantaMulti_8h__dep__incl.md5  MantaMulti_8h__incl.md5  MantaServer_8h.tex  MantaServer_8h__dep__incl.md5  MantaUSB_8cpp.tex  MantaUSB_8cpp__incl.md5  MantaUSB_8h.tex  MantaUSB_8h__dep__incl.md5  MantaUSB_8h__incl.md5  MantaVersion_8h.tex  Manta_8cpp.tex  Manta_8cpp__incl.md5  Manta_8h.tex  Manta_8h__dep__incl.md5  Manta_8h__incl.md5  annotated.tex  classLibusbInitException.tex  classLibusbInitException__coll__graph.md5  classManta.tex  classMantaClient.tex  classMantaClient__inherit__graph.md5  classMantaCommunicationException.tex  classMantaCommunicationException__coll__graph.md5  classMantaCommunicationException__inherit__graph.md5  classMantaMap.tex  classMantaMap__coll__graph.md5  classMantaMulti.tex  classMantaMulti__coll__graph.md5  classMantaMulti__inherit__graph.md5  (+20 more)
platform/linux/: 99-manta.rules
platform/osx/: mantaswitch.sh
search/: all_63.js  all_64.js  all_69.js  all_6d.js  all_72.js  all_73.js  all_77.js  classes_6d.js  functions_67.js  functions_6d.js  search.js
src/: Manta.cpp  Manta.h  MantaUSB.h  MantaUSB_Linux.cpp  main.cpp
src/tests/: MantaTest.cpp  MantaUSBTest.cpp
tests/: CMakeLists.txt  MantaTest.cpp  MantaUSBTest.cpp  MantaUSBTimer.cpp  hidapiTest.cpp
(+8 files in other folders)
