cmake_minimum_required (VERSION 2.6)
find_path(LO_INCLUDE_DIR liblo.h)
find_library(LO_LIBRARY lo)
find_path(USB-1.0_INCLUDE_DIR libusb.h)
find_library(USB-1.0_LIBRARY usb-1.0)
include_directories(${USB-1.0_INCLUDE_DIR} ${LO_INCLUDE_DIR})
add_executable(MantaOSC MantaOSC.cpp ../core/Manta.cpp ../core/MantaUSB.cpp)
target_link_libraries(MantaOSC ${LO_LIBRARY} ${USB-1.0_LIBRARY} m)
